fixed white space conselho page

--- a/public/assets/stylesheets/application.css
+++ b/public/assets/stylesheets/application.css
@@ -374,7 +374,7 @@ body.mapeando,body.chegajunto,body.desafioagora{
 
 .header-paralax.conselho{
      background-image: url('../images/conselho/conselhodajuventude-background.jpg');
-     height: 600px;
+     height: 485px;
 }
 .header-paralax.desafioagora{
     background-image:linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),url('../images/desafioagora/second-agora-background-clariza-reriew-two.jpg');
